# PokedexAPI

./: Cargo.toml  README.md  pokemon_db.json
src/: db.rs  main.rs  models.rs  routes.rs
